[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/OptionM.gd" type="Script" id=1]
[ext_resource path="res://Asset/Font/SettingLabel.tres" type="DynamicFont" id=2]
[ext_resource path="res://Asset/Font/PressStart2P-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://UI/option.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
extra_spacing_top = 7
font_data = ExtResource( 3 )

[node name="OptionM" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -175.0
margin_right = 400.0
margin_bottom = 175.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 401.5, 174 )
scale = Vector2( 0.652344, 0.369141 )
texture = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 54.0
custom_constants/margin_right = 15
custom_constants/margin_top = 8
custom_constants/margin_left = 15
custom_constants/margin_bottom = 8

[node name="Setting" type="GridContainer" parent="MarginContainer"]
margin_left = 15.0
margin_top = 8.0
margin_right = 785.0
margin_bottom = 288.0
columns = 2

[node name="VolumeLabel" type="Label" parent="MarginContainer/Setting"]
margin_right = 198.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 2 )
text = "Volume"

[node name="VolumeSLider" type="HSlider" parent="MarginContainer/Setting"]
margin_left = 370.0
margin_right = 770.0
margin_bottom = 33.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 50.0

[node name="FSLabel" type="Label" parent="MarginContainer/Setting"]
margin_top = 40.0
margin_right = 198.0
margin_bottom = 73.0
custom_fonts/font = ExtResource( 2 )
text = "FullScreen"

[node name="FSButton" type="CheckButton" parent="MarginContainer/Setting"]
margin_left = 694.0
margin_top = 37.0
margin_right = 770.0
margin_bottom = 77.0
size_flags_horizontal = 10

[node name="FPSLabel" type="Label" parent="MarginContainer/Setting"]
margin_top = 84.0
margin_right = 198.0
margin_bottom = 117.0
custom_fonts/font = ExtResource( 2 )
text = "Display FPS"

[node name="FPSButton" type="CheckButton" parent="MarginContainer/Setting"]
margin_left = 694.0
margin_top = 81.0
margin_right = 770.0
margin_bottom = 121.0
size_flags_horizontal = 10

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 1 )
text = "OPTION"
align = 1
valign = 1

[connection signal="value_changed" from="MarginContainer/Setting/VolumeSLider" to="." method="_on_VolumeSLider_value_changed"]
[connection signal="toggled" from="MarginContainer/Setting/FSButton" to="." method="_on_FSButton_toggled"]
[connection signal="toggled" from="MarginContainer/Setting/FPSButton" to="." method="_on_FPSButton_toggled"]
